unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/engage_reports__Engage_Lead_Stat__c.object-meta.xml
<CustomObject>
    <label>Engage Lead Stat</label>
    <nameField>
        <label>Engage Lead Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Lead Stats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>