unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>