unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Engage_Send__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Engage_Send__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engage Send</label>
    <referenceTo>engage_reports__Engage_Send__c</referenceTo>
    <relationshipLabel>Engage Lead Stats</relationshipLabel>
    <relationshipName>Engage_Lead_Stats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>