unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Hour__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Hour__c</fullName>
    <label>Hour</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>