unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Lead__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Engage Lead Stats</relationshipLabel>
    <relationshipName>Engage_Lead_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>