unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Lead_Id__c</fullName>
    <label>Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>