unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Unsubscribes__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Unsubscribes__c</fullName>
    <label>Unsubscribes</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>