unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/engage_reports__Version__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Version__c</fullName>
    <label>Version</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>