unpackaged/main/default/objects/engage_reports__Engage_Lead_Stat__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Used by Data tool in the SDO to insert records</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>